# pca_mnist

./: PCA.md  README.md
code/: CMakeLists.txt  main.cpp
code/include/: covariance.h  eigenQR.h  matplotlibcpp.h  mnistheader.h  pca.h  subtractmean.h
code/src/: covariance.cpp  eigenQR.cpp  mnistreader.cpp  pca.cpp  subtractmean.cpp
