cmake_minimum_required(VERSION 2.8)
project(pca)
find_package(OpenCV REQUIRED)
include_directories(${PROJECT_SOURCE_DIR}/include)  
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
add_executable(pca main.cpp ${SOURCES})
target_link_libraries(pca ${OpenCV_LIBS})
target_include_directories(pca PRIVATE ${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS})
target_link_libraries(pca Python3::Python Python3::NumPy)
